crux-mir/test/symb_eval/num/checked_div.good
test checked_div/<DISAMB>::crux_test[0]: returned 65, FAILED

failures:

---- checked_div/<DISAMB>::crux_test[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/num/checked_div.rs:3:5: 3:10: error: in checked_div/<DISAMB>::div_signed[0]
[Crux]   attempt to compute `copy _1 / copy _2`, which would overflow
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/num/checked_div.rs:3:5: 3:10: error: in checked_div/<DISAMB>::div_signed[0]
[Crux]   attempt to divide `copy _1` by zero
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/num/checked_div.rs:8:5: 8:10: error: in checked_div/<DISAMB>::div_unsigned[0]
[Crux]   attempt to divide `copy _1` by zero

[Crux] Overall status: Invalid.
